hard-gists/df0b30453338946e639449710862822d/run.log
=== Docker Run Log for df0b30453338946e639449710862822d ===
Started at: Mi 29. Okt 20:37:30 CET 2025

[2025-10-29 20:37:30] START: Running container for df0b30453338946e639449710862822d
[2025-10-29 20:37:31] SUCCESS: Container ce4f991f02e51de9ef9df8f6c76f1d367afb7cd15621cf4202b5b076c9a0c2d5 started for df0b30453338946e639449710862822d
=== Container logs for df0b30453338946e639449710862822d ===
  File "/snippet.py", line 51
    print "Plotting K..."
    ^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for df0b30453338946e639449710862822d ===
[2025-10-29 20:37:33] INFO: Container ce4f991f02e51de9ef9df8f6c76f1d367afb7cd15621cf4202b5b076c9a0c2d5 has stopped
